@@ -28,9 +28,9 @@ import org.apache.commons.lang3.StringUtils;
 import org.springframework.security.core.GrantedAuthority;
 import org.springframework.util.CollectionUtils;
 
-import java.util.HashSet;
+import java.io.Serial;
+import java.io.Serializable;
 import java.util.List;
-import java.util.Set;
 import java.util.stream.Collectors;
 
 /**
@@ -44,7 +44,11 @@ import java.util.stream.Collectors;
 @Data
 @NoArgsConstructor
 @AllArgsConstructor
-public class CrustPerm {
+public class CrustPerm implements Serializable {
+
+    @Serial
+    private static final long serialVersionUID = -152359602270167238L;
+
     /**
      * 是否为Admin用户
      * @since 3.14.0
@@ -54,7 +58,7 @@ public class CrustPerm {
     /**
      * 角色ID列表
      */
-    private Set<Long> roleIds;
+    private List<Long> roleIds;
 
     /**
      * 权限列表
@@ -80,7 +84,7 @@ public class CrustPerm {
         }
 
         public Builder roleIds(List<Long> roleIds) {
-            this.crustPerm.setRoleIds(new HashSet<>(roleIds));
+            this.crustPerm.setRoleIds(roleIds);
             return this;
         }
 
@@ -105,7 +109,7 @@ public class CrustPerm {
         if (permissionList == null) {
             return null;
         }
-        List<String> codeList = permissionList.stream().map(CrustPermission::getCode).filter(StringUtils::isNotBlank).collect(Collectors.toList());
+        List<String> codeList = permissionList.stream().map(CrustPermission::getCode).filter(StringUtils::isNotBlank).toList();
         if (CollectionUtils.isEmpty(codeList)) {
             return null;
         }
